Fix renovate config for grpc_health_probe
In #30643 we noticed that we forgot to add a file match so renovate did
not update the dependency. This PR should fix that and renovate should
start updating the dependency automatically.

Signed-off-by: Fabian Fischer <fabian.fischer@isovalent.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -499,7 +499,8 @@
     {
       "fileMatch": [
         "images/cilium/download-hubble\\.sh",
-        "images/runtime/build-gops.sh"
+        "images/runtime/build-gops.sh",
+        "images/hubble-relay/download-grpc-health-probe.sh"
       ],
       // These regexes manage version and digest strings in shell scripts,
       // similar to the examples shown here:
