--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -52,8 +52,6 @@ concurrency:
 
 env:
   cilium_cli_ci_version:
-  # renovate: datasource=docker depName=kindest/node
-  k8s_version: v1.29.2
 
 jobs:
   commit-status-start:
@@ -257,7 +255,7 @@ jobs:
           test-name: e2e-conformance
           kernel: ${{ matrix.kernel }}
           kind-params: "${{ steps.kind-params.outputs.params }}"
-          kind-image-vsn: ${k8s_version}
+          kind-image: ${{ env.KIND_K8S_IMAGE }}
 
       # Warning: since this is a privileged workflow, subsequent workflow job
       # steps must take care not to execute untrusted code.
